# spicy-todo-app

./: .gitignore  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  package.json  start-dev.bat  start-dev.sh  start-fullstack.bat  start-fullstack.sh
api/express-api/: .dockerignore  .eslintrc.js  Dockerfile  Dockerfile.dev  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  env.example  jest.config.js  package.json  start-docker.bat  start-docker.sh  start.bat  start.sh
api/go-gin-api/: .dockerignore  Dockerfile  Makefile  README.md  benchmark_test.go  docker-compose.yml  go.mod  go.sum  integration_test.go  main.go
api/pyfast-api/: .dockerignore  Dockerfile  FRONTEND_INTEGRATION.md  README.md  TESTING.md  database.py  db.py  docker-compose.dev.yml  docker-compose.yml  env.example  logging_config.py  main.py  middleware.py  models.py  orm_models.py  pytest.ini  requirements.txt  run.py  run_tests.py  start-docker.bat  start-docker.sh  start.bat  start.sh  test_api.py
api/ruby-sinatra-api/: .dockerignore  .rspec  Dockerfile  Gemfile  Makefile  Rakefile  app.rb  docker-compose.yml
api/rust-actix-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
api/rust-actix-api/src/: handlers.rs  handlers_test.rs  integration_test.rs  main.rs  models.rs  routes.rs  service.rs
api/spring-boot-api/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pom.xml
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  TESTING.md  jest.config.js  nginx.conf  package-lock.json  package.json  test-runner.js
(+139 files in other folders)
